fix: update project to use mongodb
